tests/invalidTest/other/for_start_with_invalid_step.q
# EXPECT the step is invalid because type cannot be converted

def sint64 errorTest(){
    for uint64 arr, arr<1,-1
    { }
    return 2
} 